--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "name": "chatengine",
-  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3000",
     "build": "next build",
-    "start": "next start -p 3000"
+    "start": "next start"
   },
   "dependencies": {
     "firebase": "^10.14.0",
